feat: (frontend) started landing with header, search bar and overall stats. Added vlru, log-in, search icons and new style vars fix: (silly-canny-lib) added suffixIcon for Button.vue and StatsLabel.vue shows right colors based on value

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
 
+body {
+  background-color: var(--color-background);
+}
+
 @font-face {
   font-family: 'SF Pro';
   src: url('/fonts/SF-Pro-Regular.otf') format('opentype');
