--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -14,7 +14,9 @@
 
   /* Status */
   --color-status-success: #31d158;
+  --сolor-status-success-bg: rgba(49, 209, 88, 0.1);
   --color-status-destructive: #e53935;
+  --color-status-destructive-bg: rgba(229, 57, 53, 0.1);
 
   /* Background */
   --color-background: #f9f9f9;
